# Python-Learn

./: principles and patterns.py  pyproject.toml
DL/: PyTorch intro.py  intro_pytorch.ipynb  tensors.ipynb  tensors2.ipynb  tensors3.ipynb  tensors4.ipynb
LLM/: attention_mechanism.ipynb  pipeline_function.ipynb  tokenization.ipynb
OOP/: Classes and Objects.py  __call__.py  __new__.py  access_modes.py  classmethod_and_staticmethod.py  descriptors.py  init_and_del.py  keyword_self.py  property_decorator.py
